--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "rshb-file-tree",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "classnames": "^2.5.1",
@@ -15,10 +14,15 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@types/jest": "29.5.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "typescript": "^5"
