--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "classnames": "^2.5.1",
     "next": "15.3.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
     "@types/jest": "29.5.11",
+    "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "29.7.0",
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
     "typescript": "^5"
   }
 }
